--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,73 @@ li > ul > * {
 html{
     font-size: 50px;
 } */
+
+*{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    border: 0;
+
+}
+ nav {
+    display: inline-block;
+    font-size: 28px;
+    width: 98.2%;
+    justify-content: center;
+    background-color: rgb(114, 112, 112);
+    padding:10px;
+    border: 5px solid rgb(51, 50, 50);
+    text-align: center;
+    font:medium;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+} 
+
+ul > li {
+    display: inline-block;
+    padding: 50px;
+    font-size: 30px;
+    
+
+}
+h1 {
+    font-size: 40px;
+    display: inline;
+    text-align: center;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top:40px;
+    padding-bottom: 40px;
+    border: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+h2 {
+    font-size: 30px;
+    display: inline;
+    color: gray;
+    padding-left: 50px;
+    padding-right: 40px;
+    padding-top:40px;
+    padding-bottom: 50px;
+    border: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    
+}
+p {
+    font-size: 20px;
+    display: inline;
+    color: gray;
+    padding-left: 50px;
+    padding-right: 500px;
+    padding-top:30px;
+    border: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    
+}
+#iam {
+    background-color: rgb(60, 61, 56);
+}
+
