--- a/styles.css
+++ b/styles.css
@@ -56,79 +56,94 @@ html{
 */
 
 *{
-    list-style-type: none;
     padding: 0;
     margin: 0;
     border: 0;
-
 }
- nav {
-    display: inline-block;
-    font-size: 28px;
-    width: 98.2%;
-    justify-content: center;
-    background-color: rgb(114, 112, 112);
-    padding:10px;
-    border: 5px solid rgb(51, 50, 50);
-    text-align: center;
-    font:medium;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-} 
+
+body{
+    display: flex;
+    width: 100%;
+}
 
 ul > li {
+    font: size 30px;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 20px;
+    padding-right: 25px;
+    padding-top:20px;
+    padding-bottom: 20px;
    
-    padding: 50px;
-    font-size: 30px;
-    border: 1px solid white;  
 }
 ul {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    border: 2px solid black;  
     
 }
+
+#icons
+{
+    display: flex;
+    flex-direction: column;
+    background-color: purple;
+
+}
+
+.iconbig{
+    width: 40px;
+    height: 40px;
+   
+
+}
+.iconsm{
+    width: 20px;
+    height: 20px;
+    display: flex;
+    
+}
+#chat
+{
+    display: flex;
+    flex-direction: row;
+
+}
+
 h1 {
     font-size: 40px;
-    display: inline;
-    text-align: center;
-    padding-left: 40px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-left: 10px;
     padding-right: 40px;
-    padding-top:40px;
-    padding-bottom: 40px;
-    border: 30px;
+    padding-top:20px;
+    padding-bottom: 20px;
+    border: 2px solid black;  
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+    background-color: purple;
 }
 h2 {
     font-size: 30px;
-    display: inline;
-    color: gray;
-    padding-left: 50px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-left: 10px;
     padding-right: 40px;
-    padding-top:40px;
-    padding-bottom: 50px;
-    border: 30px;
+    padding-top:20px;
+    padding-bottom: 20px;
+    border: 2px solid black;  
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
-    
 }
-p {
-    font-size: 20px;
-    display: inline;
-    color: gray;
-    padding-left: 50px;
-    padding-right: 500px;
-    padding-top:30px;
-    border: 30px;
+p1 {
+    padding-left: 30px;
+    padding-right: 20px;
+    padding-top:2px;
+    padding-bottom: 5px;
+    text-align: justify;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-    
-}
-#iam {
-    background-color: rgb(60, 61, 56);
-}
-
-main > section {
-    margin: 20px 0;
 }
