--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,45 @@ html{
 }
 */
 
+
+
 #container {
-    width:400px;
-    height:400px;
-    background-color: red;
+    width: 400px;
+    height:300px;
+    display: grid;
+   
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 33.3% 33.3% 33.3%;
+    grid-template-areas: 
+    'imagenuno . . . '
+    '. imagendos . imagentres'
+    ' .  . imagencuatro .';
+    background-color: silver;
+    border: 2px solid black;
 }
+
+.size 
+{
+    width: 100%;
+    height: 100%;
+}
+.imagenuno{
+    grid-area: imagenuno;
+  
+}
+.imagendos{
+    grid-area: imagendos;
+  
+}
+.imagentres{
+    grid-area: imagentres;
+   
+}
+.imagencuatro{
+    grid-area: imagencuatro;
+   
+   
+}
+
+/* width:300px 
+height:400px  */
