--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,33 @@ html{
 */
 
 .contenedor{
-    height: 400px;
-    background-color: red;
+    height: 1000x;
+    background-color: rgb(233, 200, 233);
+    padding-top: 10px;
+}
+h1{
+    text-align: center;
+    font-size: x-large;
+}
+h2{
+    text-align: center;
+    font-size: medium;
+}
+h3{
+    text-align: center;
+    font-size: medium;
+}
+h4{
+    text-align: center;
+    font-size: small
+}
+h5{
+    text-align: center;
+    font-size: x-small;
+}
+p{
+    text-align: justify;
+}
+*{
+    background-color: rgb(233, 200, 233);
 }
