ejercicio responsive terminado

--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@ html{
 
 
 #container {
-    width: 400px;
-    height:300px;
+    width: 600px;
+    height:600px;
     display: grid;
    
     grid-template-columns: 25% 25% 25% 25%;
@@ -68,7 +68,7 @@ html{
     'imagenuno . . . '
     '. imagendos . imagentres'
     ' .  . imagencuatro .';
-    background-color: silver;
+    background-color: black;
     border: 2px solid black;
 }
 
@@ -95,5 +95,3 @@ html{
    
 }
 
-/* width:300px 
-height:400px  */
