--- a/tablet.css
+++ b/tablet.css
@@ -1,17 +1,17 @@
 
-@media screen and  (max-width: 768px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
 
 #container {
-    width:200px;
-    height:200px;
+    width:400px;
+    height:400px;
     background-color: black;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 33.3% 33.3% 33.3%;
     grid-template-rows: 33.3% 33.3% 33.3%;
     grid-template-areas: 
-    'imagenuno .  '
-    '. imagendos '
-    ' imagentres imagencuatro '; 
+    'imagenuno . . '
+    '. imagendos imagentres'
+    ' .  . imagencuatro '; 
     border: 2px solid black;
 }
 
